Use static method instead of instance method
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@177853 13f79535-47bb-0310-9956-ffa450edef68